# piper_tictactoe

./: .gitignore
board_perception/: CMakeLists.txt  package.xml
board_perception/include/board_perception/: board_processor_node.hpp  board_processor_server.hpp  image_processor.hpp
board_perception/msg/: BoardState.msg
board_perception/src/: board_processor_node.cpp  board_processor_server.cpp  image_processor.cpp
board_perception/srv/: ProcessBoard.srv
contour_planner/: CMakeLists.txt  package.xml
contour_planner/src/: contour_planner.cpp
move_manager/: CMakeLists.txt  package.xml
move_manager/msg/: GameResult.msg
move_manager/src/: move_manager.cpp
move_manager/srv/: PlayMove.srv
piper_trajectory/: CMakeLists.txt  package.xml
piper_trajectory/include/piper_trajectory/: trajectory_executor.hpp  trajectory_server.hpp
piper_trajectory/src/: tictactoe_trajectory.cpp  trajectory_executor.cpp  trajectory_server.cpp
piper_trajectory/srv/: ExecuteTrajectory.srv
tictactoe_bringup/: CMakeLists.txt  package.xml
tictactoe_bringup/launch/: tictactoe.launch.py  tictactoe_sim.launch.py  webpage.launch.py
tictactoe_bringup/webpage/: index.html  main.js  mjpegcanvas.min.js  styles.css
tictactoe_manager/: CMakeLists.txt  package.xml
tictactoe_manager/src/: tictactoe_manager.cpp
webpage/: index.html  main.js  mjpegcanvas.min.js  styles.css
