<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contour_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robertogroza@gmail.com">robert</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>piper_trajectory</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>piper_trajectory</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
